--- a/css/variables.css
+++ b/css/variables.css
@@ -17,6 +17,6 @@
     --font-size-paragraph: 16px;
     --font-size-form: 20px;
 
-    --font-paragraph: 'Arial';
+    --font-paragraph: 'Roboto';
     --font-heading: 'Oswald';
 }
