--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,13 +1,13 @@
 @font-face {
-    font-family: 'Arial';
-    src: url(../fonts/Arial.ttf) format('opentype');
+    font-family: 'Oswald';
+    src: url(../fonts/Oswald-Regular.ttf) format('opentype');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
-    font-family: 'Oswald';
-    src: url(../fonts/Oswald-Regular.ttf) format('opentype');
+    font-family: 'Roboto';
+    src: url(../fonts/Roboto-Regular.ttf) format('opentype');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
