--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,10 @@
     grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 80px;
 }
+.row {
+    display: flex;
+    flex-direction: row;
+}
 body {
     position: relative;
     color: var(--color-text);
@@ -71,6 +75,7 @@ h6,
     text-transform: uppercase;
     border: none;
     cursor: pointer;
+    white-space: nowrap;
 }
 .button-catalog-main:hover {
     background-color: var(--color-primary-hover);
@@ -93,6 +98,45 @@ h6,
 .button-grey:active {
     background-color: var(--color-secondary-hover);
     color: #B3B3B3;
+}
+.link-arrow {     /*independent*/
+    position: relative;
+    font-family: var(--font-heading);
+    text-decoration: none;
+    color: var(--color-text);
+    font-size: 20px;
+    line-height: 1;
+    text-transform: uppercase;
+    cursor: pointer;
+    white-space: nowrap;
+}
+.link-arrow::before {
+    content: '';
+    position: absolute;
+    top: 15px;
+    left: calc(100% + 20px);
+    width: 18px;
+    height: 2px;
+    background-color: var(--color-text);
+    transition: 0.2s;
+    cursor: default;
+}
+.link-arrow::after {
+    content: '';
+    position: absolute;
+    top: 12px;
+    left: calc(100% + 20px + 18px);
+    border-left: 8px solid var(--color-text);
+    border-top: 4px solid transparent;
+    border-bottom: 4px solid transparent;
+    transition: 0.2s;
+    cursor: default;
+}
+.link-arrow:hover::before {
+    width: 26px;
+}
+.link-arrow:hover::after {
+    left: calc(100% + 20px + 24px);
 }
 /*___________________________________________buttons end*/
 /*___________________________________________header start*/
@@ -127,6 +171,7 @@ h6,
     text-decoration: none;
     text-transform: uppercase;
     color: var(--color-text);
+    white-space: nowrap;
 }
 .menu-link::after {
     content: '';
