--- a/css/form.css
+++ b/css/form.css
@@ -15,7 +15,7 @@ label {
 }
 input {
     padding: 14px 20px;
-    border: 1px solid var(--color-form-border);
+    border: 1px solid var(--color-border);
 }
 .checkbox-container {
     position: relative;
@@ -38,7 +38,7 @@ form [type="radio"] ~ label::before {
     top: 0;
     left: 0;
 
-    border: 1px solid var(--color-form-border);
+    border: 1px solid var(--color-border);
     background-color: #fff;
 
     cursor: pointer;
