--- a/css/index.css
+++ b/css/index.css
@@ -1,47 +1,66 @@
 @import url(styles.css);
+
+
+h2, section {
+    margin-bottom: var(--margin-bottom-index-main);
+}
+
+/*_________________________________header start*/
 .menu-link {
     color: #fff;
 }
 .menu-link::after {
     background-color: #fff;
 }
+/*_______________________________________header end*/
 /*__________________________________________banner start*/
 .banner {
-    padding: 20vh 0 0 80px;
+    padding-top: 20vh;
     height: calc(100vh - 75px); /*minus header*/
-    background: url(../img/index/banner-img.png) no-repeat 360px 20%;
-    margin-bottom: 82px;
 }
-.banner .banner--bg-img {
+.banner .banner--background-img {
     position: absolute;
     height: 100vh;
-    width: calc(50vw + 40px);
-    overflow-x: hidden;
+    width: calc( 50vw + (var(--gap-between-columns) / 2) );       /*50vw + half of grid-column-gap: 80px;*/
     top: 0;
     z-index: -1;
-    left: calc(50vw - 40px);                                                                             /*TO DO*/
+    right: 0;
     background-image: url(../img/index/index-background-desktop.jpg);
     background-size: cover;
 }
-.banner h1 {
+.banner .banner--content-box {
+    position: relative;
+    width: fit-content;
+    left: 50%;
+    transform: translate(-105%, 0);
+}
+.banner--content-box img {
+    position: absolute;
+    left: 300px;
+    top: -70px;
+    z-index: -1;
+}
+.banner--content-box h1 {
     width: 414px;
     margin-bottom: 40px;
 }
-.banner p {
+.banner--content-box p {
     text-transform: uppercase;
     margin-bottom: 52px;
 }
 /*__________________________________________banner end*/
-/*__________________________________________program card*/
-.card-program {
+/*__________________________________________ category*/
+.category {
     background-color: var(--color-secondary);
-    padding: 47px 52px;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
 }
-.card-program .row {
+.category .row-box {
     align-items: center;
-    margin-bottom: 39px;
+    margin-bottom: var(--margin-bottom-index-secondary);
 }
-.card-program--picture {
+.category--picture {
     margin-right: 46px;
     height: 107px;
     width: 135px;
@@ -51,7 +70,11 @@
     position: relative;
     z-index: 0;
 }
-.card-program--picture::before {
+.category--picture img {
+    width: 100%;
+    height: 100%;
+}
+.category--picture::before {
     content: '';
     position: absolute;
     left: center;
@@ -62,14 +85,65 @@
     width: 100px;
     border-radius: 50px;
 }
-.card-program h3 {
-    white-space: nowrap;
+.category h3 {
     text-transform: uppercase;
 }
-.card-program p {
-    margin-bottom: 27px;
+.category p {
+    margin-bottom: var(--margin-bottom-index-secondary);
 }
-/*__________________________________________program card end*/
+.category .link-arrow {
+    margin-top: auto;
+    width: fit-content;
+}
+
+.category .link-arrow::before {
+    top: 10px;
+}
+.category .link-arrow::after {
+    top: 7px;
+}
+/*__________________________________________ category end*/
+/*__________________________________________.how-it-works*/
+.how-it-works ol {
+    counter-reset: item;
+}
+.how-it-works li {
+    position: relative;
+    height: 240px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.how-it-works li::before {
+    content: counter(item);
+    counter-increment: item;
+    position: absolute;
+    right: 0;
+    top: -40px;
+    z-index: -1;
+    color: var(--color-secondary);
+    font-family: var(--font-heading);
+    font-size: 280px;
+    line-height: 1;
+}
+.how-it-works li div {
+    background-color: var(--color-primary);
+    height: 80px;
+    width: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: var(--margin-bottom-index-secondary);
+}
+/*_________________________________.how-it-works end*/
+/*_____________________________________example*/
+.example div {
+    border: 1px red solid;
+}
+.example--slider {
+    width: 100%;
+}
+/*_____________________________________example end*/
 
 
 
@@ -82,36 +156,157 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media screen and (max-width: 991px /*767px*/) {
+@media screen and (max-width: 991px) {
+    /*_________________________________header start*/
     .menu-link {
         color: var(--color-text);
     }
     .menu-link::after {
         background-color: var(--color-primary);
     }
+    /*_________________________________header end*/
+    /*_________________________________banner start*/
+    .banner {
+        position: relative;
+        height: calc(100vh - 67px); /*minus header*/
+        padding: 60px 0 0 117px;
+        margin-bottom: 0;
+    }
+    .banner .banner--background-img {
+        display: none;
+    }
+    .banner .banner--content-box {
+        position: static;
+        transform: none;
+    }
+    .banner--content-box img {
+        height: 80%;
+        top: 100%;
+        left: 100%;
+        transform: translate(-100%, -100%);
+    }
+    /*__________________________________banner end*/
+    /*___________________________________ category*/
+    .category {
+        position: relative;
+        margin-bottom: var(--margin-bottom-index-secondary);
+    }
+    .category:last-child {
+        margin-bottom: 0;
+    }
+    .category .row-box {
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        margin-bottom: 0;
+    }
+    .category--picture {
+        transform: scale(2, 2) translate(0, 40px);
+    }
+    .category p {
+        width: calc(100% - 270px - 20px);
+    }
+    /*___________________________________ category end*/
+    /*__________________________________________.how-it-works*/
+    .how-it-works {
+        border-bottom: 1px solid var(--color-border);
+    }
+    .how-it-works li {
+        margin: var(--margin-bottom-index-secondary) 0;
+    }
+    /*__________________________________________.how-it-works end*/
+}
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 767px) {
+    /*_________________________________banner start*/
+    .banner {
+        height: fit-content;
+        padding: 30px 0 0 0;
+        margin-bottom: var(--margin-bottom-index-main);
+    }
+    .banner .banner--background-img {
+        display: block;
+        background-image: url(../img/index/index-background-mobile.jpg);
+        width: 100vw;
+        height: 100vw; /*equal to width*/
+        right: -20px;
+        }
+    .banner--content-box img {
+        position: static;
+        top: 0;
+        transform: none;
+        width: 100%;
+        flex-shrink: 1;
+    }
+    .banner--content-box h1,
+    .banner--content-box p {
+        width: 250px;
+        color: #fff;
+        text-align: center;
+        margin: 0 auto 25px;
+    }
+    .banner--content-box button {
+        width: 100%;
+    }
+    /*_________________________________banner end*/
+    /*___________________________________ category*/
+    .category {
+        padding: 20px;
+    }
+    .category .row-box {
+        flex-direction: row;
+        justify-content: start;
+        margin-bottom: var(--margin-bottom-index-secondary);
+    }
+    .category--picture {
+        transform: none;
+        margin-right: 15px;
+        width: 67px;
+        height: 53px;
+    }
+    .category--picture::before {
+        height: 50px;
+        width: 50px;
+        border-radius: 25px;
+    }
+    .category p {
+        width: 100%;
+        padding-bottom: var(--margin-bottom-index-secondary);
+        border-bottom: 1px solid var(--color-border);
+    }
+    /*___________________________________ category end*/
+    /*__________________________________________.how-it-works*/
+    .how-it-works {
+        border: none;
+    }
+    .how-it-works li {
+        margin-top: 0;
+        height: fit-content;
+        flex-direction: row;
+        align-items: center;
+    }
+    .how-it-works li::before {
+        display: none;
+    }
+    .how-it-works li div {
+        margin: 0 20px 0 0;
+        width: 60px;
+        height: 60px;
+        flex-shrink: 0;
+    }
+
+
+    /*__________________________________________.how-it-works end*/
+
 
 }
