--- a/css/catalog.css
+++ b/css/catalog.css
@@ -1,1 +1,227 @@
 @import url(styles.css);
+
+h1 {
+    margin-top: var(--margin-bottom-main);
+    margin-bottom: var(--margin-bottom-secondary);
+}
+h2, h3, section {
+    margin-bottom: var(--margin-bottom-main);
+}
+
+
+/*___________________________________________product-card*/
+.product-card {
+    position: relative;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+}
+.product-card::before {
+    content: '';
+    position: absolute;
+    background-color: var(--color-secondary);
+    width: 100%;
+    height: 430px;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+}
+.product-img-box {
+    margin-bottom: var(--margin-bottom-secondary);
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+.product-img-box img {
+    max-width: 100%;
+    max-height: 100%;
+}
+.product-card h4 {
+    text-transform: uppercase;
+    text-align: center;
+    color: #222222;
+    margin: 0 auto var(--margin-bottom-secondary);
+    max-width: 135px;
+}
+.product-data .row-box {
+    justify-content: space-between;
+    color: var(--color-text-secondary);
+    border-bottom: 1px solid var(--color-border);
+}
+.product-data .row-box:last-child {
+    margin-bottom: var(--margin-bottom-secondary);
+}
+/*___________________________________________product-card end*/
+/*_____________________________________________additional-items*/
+.additional-items::before {
+    content: '';
+    height: 24px;
+    width: 100vw;
+    z-index: -1;
+    background-color: transparent;
+    border-bottom: 2px solid var(--color-primary);
+    position: absolute;
+    left: 0;
+    overflow: hidden;
+}
+.additional-items h3 {
+    background-color: #fff;
+    width: fit-content;
+    padding: 0 35px;
+    transform: translate(-35px, 0);                     /*overflow need to hide but there's a bug*/
+}
+.additional-items .container-grid-4col {
+    grid-row-gap: 0;
+}
+/*.additional-items .container-grid-4col * {
+    border: 1px solid red;
+}*/
+.additional-items-row {
+    grid-column-start: 1;
+    grid-column-end: 4;
+
+    /*display: grid;
+    grid-template-columns: subgrid;*/
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: var(--gap-between-columns);                     /*!!!!!!!!!!!!!!!*/
+
+    align-items: center;
+    padding: 13px 0;
+    border-bottom: 1px solid var(--color-border);
+}
+.additional-items-row:first-child {
+    border-top: 1px solid var(--color-border);
+}
+.additional-items-row h4 {
+    text-transform: uppercase;
+}
+.additional-items-row .row-box {
+    justify-content: space-between;
+    color: var(--color-text-secondary);
+    white-space: nowrap;
+}
+.additional-items-row .price {
+    transform: translate(100%, 0); 
+}
+/*.additional-items-row button {
+    width: 100%;
+}*/
+.additional-items-bonus {
+    grid-column-start: 4;
+    grid-row-start: 1;
+    grid-row-end: 5;
+
+    border: 1px solid red;
+}
+
+
+
+
+
+
+
+
+
+
+
+/*__________________________________________________additional-items end*/
+
+
+
+
+
+
+
+
+@media screen and (max-width: 991px) {
+    .additional-items .container-grid-4col {
+        display: block;
+    }
+    .additional-items-row {
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: var(--gap-between-columns);
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 767px) {
+    /*___________________________________________product-card*/
+    .product-card {
+        padding: 25px 0;
+        border-top: 1px solid var(--color-border);
+    }
+    .product-card:last-child {
+        border-bottom: 1px solid var(--color-border);
+    }
+    .product-card::before {
+        display: none;
+    }
+    .product-card h4 {
+        text-align: start;
+        margin-left: 0;
+        max-width: 75px;
+    }
+    .product-card .row-mobile {
+        display: flex;
+    }
+    .product-img-box, .product-data {
+        width: 50%;
+    }
+    .product-data {
+        margin-bottom: var(--margin-bottom-secondary);
+    }
+    .product-img-box {
+        height: 140px;
+        margin: 0;
+    }
+    .product-data .row-box {
+        border-bottom: none;
+    }
+    .product-data .row-box:last-child {
+        margin-bottom: 0;
+    }
+    /*___________________________________________product-card end*/
+
+
+
+
+
+
+
+}
